Minor clearguide cleanup stuff.